update manager delete(soft delete)